syntax = "proto3";

package sensors_pb;

import "google/protobuf/timestamp.proto";

option go_package = ".;sensors_pb";

message GetVoltageMeasurementsRequest {
  string DeviceID = 1;
  google.protobuf.Timestamp StartTime = 2;
  google.protobuf.Timestamp EndTime = 3;
}

message GetVoltageMeasurementsResponse {
  google.protobuf.Timestamp StartTime = 1;
  float Voltage = 2;
}

message GetHumidityMeasurementsRequest {
  string DeviceID = 1;
  google.protobuf.Timestamp StartTime = 2;
  google.protobuf.Timestamp EndTime = 3;
}

message GetHumidityMeasurementsResponse {
  google.protobuf.Timestamp StartTime = 1;
  float Humidity = 2;
}

message GetTemperatureMeasurementsRequest {
  string DeviceID = 1;
  google.protobuf.Timestamp StartTime = 2;
  google.protobuf.Timestamp EndTime = 3;
}

message GetTemperatureMeasurementsResponse {
  google.protobuf.Timestamp StartTime = 1;
  float Temperature = 2;
}

service SensorsService {
   rpc GetVoltageMeasurements(GetVoltageMeasurementsRequest) returns (stream GetVoltageMeasurementsResponse);
   rpc GetHumidityMeasurements(GetHumidityMeasurementsRequest) returns (stream GetHumidityMeasurementsResponse);
   rpc GetTemperatureMeasurements(GetTemperatureMeasurementsRequest) returns (stream GetTemperatureMeasurementsResponse);
}
